Add controller for Server and functions needed

--- a/public/index.html
+++ b/public/index.html
@@ -27,5 +27,6 @@
             }
         </code>
       </div>
+      <script type="text/javascript" src="common/date.js"></script>
     </body>
 </html>
