Change Heroku URL from index

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
             <ul>3) If it does not contain a date or Unix timestamp, it returns null for those properties.</ul>
         </blockquote>
         <h3>Example usage:</h3>
-        <code>https://timestamp.jinme.org/December%2015,%202015</code><br>
-        <code>https://timestamp.jinme.org/1450137600</code>
+        <code>https://cryptic-basin-92369.herokuapp.com/December%2015,%202015</code><br>
+        <code>https://cryptic-basin-92369.herokuapp.com/1450137600</code>
         <h3>Example output:</h3>
         <code>
             {
